<resources>
    <string name="app_name">GithubUser</string>
    <string name="search_username">Search Username</string>
    <string name="user_name">Ali Imran</string>
    <string name="text_followers">followers :</string>
    <string name="followers">16</string>
    <string name="following">20</string>
    <string name="text_following">Following :</string>
    <string name="location">Bandar Lampung</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_followers2">Followers</string>
    <string name="text_following2">Following</string>
    <string name="text_repositori">Repositori</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>