<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_users"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:src="@drawable/alig" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/iv_users"
            android:text="@string/user_name"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/iv_users"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <ImageView
                    android:id="@+id/iv_iconfollowers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/accent"
                    android:src="@drawable/ic_baseline_group_24"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/iv_iconfollowers"
                    android:text="@string/text_followers"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_toEndOf="@id/followers"
                    android:text="@string/followers"
                    android:textSize="12sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_iconfollowing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/accent"
                    android:src="@drawable/ic_baseline_group_add_24"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/iv_iconfollowing"
                    android:text="@string/text_following"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_toEndOf="@id/following"
                    android:text="@string/following"
                    android:textSize="12sp" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>